src/components/navbar/Navbar.css
.navbar-bg {
  background-color: #282c34;
  min-width: 100%;
  min-height: 6vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

@media (min-width: 720px) {
  .navbar-bg {
    position: fixed;
    z-index: 99;
  }
}

.navbar {
  width: 70%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

@media (min-width: 720px) {
  .navbar {
    flex-direction: row;
    justify-content: space-between;
    position: fixed;
    z-index: 99;
  }
}

.navbar a {
  display: block;
  color: white;
  text-align: center;
  text-decoration: none;
  font-size: 1.2rem;
  margin: 0.8rem;
}

.navbar a:hover {
  color: cornflowerblue;
  transition: 0.2s;
}

